fixes sign in button display issues and adjusts nav bar spacing

--- a/style.css
+++ b/style.css
@@ -40,29 +40,39 @@ path {
   margin-left: 20px;
 }
 
+#nav-barleft > a {
+  margin: 0px 5px;
+}
+
 #nav-barright {
+  margin-right: 15px;
   display: flex;
   height: 40px;
-  width: 300px;
+  width: 250px;
   justify-content: space-evenly;
   align-items: center;
 }
 
 #signin {
-  height: 30px;
+  line-height: 30px;
+  height: 32px;
   align-self: top;
   color: white;
   background-color: rgb(67, 135, 253);
   font-weight: 700;
   font-size: 13px;
-  padding: 0px 12px;
+  padding: 0px 13px;
+  border: 1px solid #f8f9fa;
+  border-radius: 4px;
+  margin: 0px 4px;
 }
 
-#nav-barleft > a {
-  margin: 0px 5px;
+#signin:hover {
+  cursor: pointer;
 }
 
 .apps {
+  margin-top: 5px;
   opacity: 0.6;
 }
 
@@ -114,6 +124,7 @@ input.buttons {
 input.buttons:hover {
   border: 1px solid rgb(218, 220, 224);
   box-shadow: 1px 1px rgb(218, 220, 224);
+  cursor: pointer;
 }
 
 div#buttons {
